# a-mouthful-of-cpp

./: .gitignore  LICENSE  README.md  build.gradle
src/cpp/: CMakeLists.txt
src/cpp/00/: hello-world.cpp
src/cpp/01/: fizzbuzz.cpp
src/cpp/02/: fizzbuzz.cpp
src/cpp/03/: fizzbuzz.cpp
src/cpp/04/: fizzbuzz.cpp
src/cpp/05/: fizzbuzz.cpp
src/cpp/06/: fizzbuzz.cpp
src/cpp/07/: fizzbuzz-to-file.cpp
src/cpp/08/: fizzbuzz-out.cpp
src/cpp/09/: everyone-dies-at-the-end.cpp
src/cpp/10/: fizzbuzz-generator.cpp
src/docs/: asciidoctor-coderay.css
src/docs/asciidoc/: index.adoc  notes.adoc
src/docs/asciidoc/slides/: hello-world.adoc  hello-world.cpp  hello.adoc  raii.adoc  thanks.adoc  what-is-cpp.adoc
src/docs/asciidoc/slides/what/: compiled.adoc  do-you-think.adoc  multi-paradigm.adoc  no-gc.adoc  static-typing.adoc  values-and-references.adoc
src/docs/reveal.js/reveal.js/css/: reveal.css
src/docs/reveal.js/reveal.js/css/theme/: beige.css  black.css  league.css  moon.css  solarized.css  white.css
src/docs/reveal.js/reveal.js/css/theme/source/: beige.scss  black.scss  blood.scss  league.scss  night.scss  simple.scss  white.scss
src/docs/reveal.js/reveal.js/plugin/notes/: notes.html
